--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -35,7 +35,7 @@ include:
   - $DOCKERDIR/data/compose/dozzle.yml
   - $DOCKERDIR/data/compose/echo-server.yml
   - $DOCKERDIR/data/compose/homepage.yml
-  - $DOCKERDIR/data/compose/portainer.yml
+  # - $DOCKERDIR/data/compose/portainer.yml
   - $DOCKERDIR/data/compose/traefik-forward-auth.yml
   - $DOCKERDIR/data/compose/traefik-proxy.yml
 {% endif %}
