Deprecate services + remove server

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -24,7 +24,7 @@ include:
   - $DOCKERDIR/data/compose/n8n.yml
   - $DOCKERDIR/data/compose/nextcloud.yml
   - $DOCKERDIR/data/compose/openspeedtest.yml
-  - $DOCKERDIR/data/compose/paperless-ngx.yml
+  # - $DOCKERDIR/data/compose/paperless-ngx.yml
   - $DOCKERDIR/data/compose/papermerge.yml
   # - $DOCKERDIR/data/compose/photoprism.yml
   - $DOCKERDIR/data/compose/plex.yml
