Phase out Wallabag

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -29,7 +29,7 @@ include:
   # - $DOCKERDIR/data/compose/photoprism.yml
   - $DOCKERDIR/data/compose/plex.yml
   # - $DOCKERDIR/data/compose/vikunja.yml
-  - $DOCKERDIR/data/compose/wallabag.yml
+  # - $DOCKERDIR/data/compose/wallabag.yml
 {% endif %}
 {% if 'webservers' in group_names %}
   - $DOCKERDIR/data/compose/dozzle.yml
