--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -37,8 +37,8 @@ local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "homepage-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "jupyter.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+# local-data: "jupyter.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+# local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "search.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "tools.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -66,8 +66,8 @@ local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "plex.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "portainer-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
+# local-data: "portainer-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+# local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
@@ -76,4 +76,4 @@ local-data: "unifi.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-guest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-noauth.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "vault.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "wallabag.{{ generic__domain_name }} A 192.168.60.2"
+# local-data: "wallabag.{{ generic__domain_name }} A 192.168.60.2"
