--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -28,6 +28,7 @@ local-data: "adguard-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "api-tester.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "api-tester-admin.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "api-tester-api.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "apps-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "auth-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "chat.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -36,7 +37,6 @@ local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "homepage-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "jupyter.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "search.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -45,6 +45,8 @@ local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
 ### Internal
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "apps-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "apps-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "bitwarden.{{ generic__domain_name }} A 192.168.1.11"
@@ -56,8 +58,6 @@ local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "homepage-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "homepage-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "n8n.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
