Deprecate Linkding & Papermerge

--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -62,7 +62,7 @@ local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "n8n.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless-noauth.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
+# local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "plex.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
