--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -20,12 +20,12 @@ include:
 {% if 'production' in group_names %}
   - $DOCKERDIR/data/compose/code-server.yml
   - $DOCKERDIR/data/compose/home-assistant.yml
-  - $DOCKERDIR/data/compose/linkding.yml
+  # - $DOCKERDIR/data/compose/linkding.yml
   - $DOCKERDIR/data/compose/n8n.yml
   - $DOCKERDIR/data/compose/nextcloud.yml
   - $DOCKERDIR/data/compose/openspeedtest.yml
   # - $DOCKERDIR/data/compose/paperless-ngx.yml
-  - $DOCKERDIR/data/compose/papermerge.yml
+  # - $DOCKERDIR/data/compose/papermerge.yml
   # - $DOCKERDIR/data/compose/photoprism.yml
   - $DOCKERDIR/data/compose/plex.yml
   # - $DOCKERDIR/data/compose/vikunja.yml
