Retire change detection

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -45,7 +45,7 @@ include:
 #   - $DOCKERDIR/data/compose/mailrise.yml
 # {% endif %}
 {% if 'webservers' in group_names and 'external' in group_names %}
-  - $DOCKERDIR/data/compose/change-detection.yml
+  # - $DOCKERDIR/data/compose/change-detection.yml
   - $DOCKERDIR/data/compose/cyberchef.yml
   - $DOCKERDIR/data/compose/drawio.yml
   - $DOCKERDIR/data/compose/excalidraw.yml
