--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -30,7 +30,7 @@ local-data: "api-tester-admin.{{ generic__domain_name }} A {{ generic__ips_svlex
 local-data: "api-tester-api.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "apps-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "auth-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+# local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "chat.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "cyberchef.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
