--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -38,6 +38,7 @@ local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "jupyter.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "n8n.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "search.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "tools.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -59,7 +60,6 @@ local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "n8n.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless-noauth.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
