Add Beaver Habits & DB backup to Az Storage

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -31,6 +31,7 @@ include:
   - $DOCKERDIR/data/compose/traefik-proxy.yml
 {% endif %}
 {% if 'webservers' in group_names and 'external' in group_names %}
+  - $DOCKERDIR/data/compose/beaverhabits.yml
   - $DOCKERDIR/data/compose/cyberchef.yml
   - $DOCKERDIR/data/compose/drawio.yml
   - $DOCKERDIR/data/compose/excalidraw.yml
