--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -37,6 +37,7 @@ local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "echo-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "excalidraw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
+local-data: "habits.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "jupyter.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "n8n.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "portainer-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
