--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -4,6 +4,11 @@ PGID={{ pgid }}
 TZ={{ tz }}
 DB_ENC_PASSPHRASE={{ generic__database_encryption_passphrase }}
 
+DB_BACKUP_SA_NAME={{ generic__database_backup_storage_account_name }}
+DB_BACKUP_SA_KEY={{ generic__database_backup_storage_account_key }}
+DB_BACKUP_SA_PATH={{ generic__database_backup_storage_account_path }}
+DB_BACKUP_SA_MODE={{ generic__database_backup_storage_account_mode }}
+
 GENERIC_HOSTNAME_PREFIX={{ generic__hostname_prefix }}
 GENERIC_HOSTNAME_SUFFIX={{ generic__hostname_suffix }}
 GENERIC_HOSTNAME_OS_TYPE={{ generic__hostname_os_type }}
