Add JetKVM bookmark

--- a/docker/ansible/templates/data/common/homepage/bookmarks.yaml.j2
+++ b/docker/ansible/templates/data/common/homepage/bookmarks.yaml.j2
@@ -9,6 +9,9 @@
         - abbr: GH
           icon: si-github-#e5e7eb
           href: https://github.com/DevSecNinja/Home
+    - JetKVM:
+        - icon: jetkvm
+          href: http://jetkvm.MANAGEMENT
     - Microsoft Azure:
         - abbr: Azure
           icon: azure
