--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -10,6 +10,8 @@ local-data: "SVLDEV.{{ generic__domain_name }} A 192.168.1.12"
 local-data: "SVLPROD.{{ generic__domain_name }} A 192.168.60.2"
 ## SVLHOST01
 local-data: "SVLHOST01.{{ generic__domain_name }} A 192.168.1.30"
+## SVLNAS01
+local-data: "SVLNAS01.{{ generic__domain_name }} A 192.168.1.30"
 ## SVLEXT
 local-data: "SVLEXT.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
