Add DNS records for media

--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -48,16 +48,20 @@ local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 ### Internal
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "apps-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "apps-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "apps-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "bitwarden.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
@@ -72,6 +76,7 @@ local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "traefik-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "unifi.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-guest.{{ generic__domain_name }} A 192.168.1.11"
