--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -65,6 +65,7 @@ local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "metube.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless-noauth.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
