--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -46,6 +46,7 @@ include:
 {% endif %}
 {% if 'media' in group_names %}
   - $DOCKERDIR/data/compose/metube.yml
+  - $DOCKERDIR/data/compose/tubesync.yml
 {% endif %}
 
 networks:
