--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -79,6 +79,7 @@ local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "traefik-prod.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "tubesync.{{ generic__domain_name }} A 192.168.60.213"
 local-data: "unifi.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-guest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-noauth.{{ generic__domain_name }} A 192.168.1.11"
