Add Plex to apps server

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -19,7 +19,6 @@ include:
   # - $DOCKERDIR/data/compose/paperless-ngx.yml
   # - $DOCKERDIR/data/compose/papermerge.yml
   # - $DOCKERDIR/data/compose/photoprism.yml
-  # - $DOCKERDIR/data/compose/plex.yml
   # - $DOCKERDIR/data/compose/vikunja.yml
   # - $DOCKERDIR/data/compose/wallabag.yml
 {% endif %}
@@ -47,6 +46,9 @@ include:
 {% if 'media' in group_names %}
   - $DOCKERDIR/data/compose/metube.yml
   - $DOCKERDIR/data/compose/tubesync.yml
+{% endif %}
+{% if 'apps' in group_names %}
+  - $DOCKERDIR/data/compose/plex.yml
 {% endif %}
 
 networks:
