--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -143,8 +143,6 @@ PAPERLESS_SECRET_KEY={{ apps__paperless_secret_key }}
 ## Photoprism
 PHOTOPRISM_MYSQL_PASSWORD={{ apps__photoprism_mysql_password }}
 PHOTOPRISM_MYSQL_ROOT_PASSWORD={{ apps__photoprism_mysql_root_password }}
-## Plex
-PLEX_CLAIM_TOKEN={{ apps__plex_claim_token }}
 ## Samba
 SAMBA_USERNAME={{ apps__samba_username }}
 SAMBA_PASSWORD={{ apps__samba_password }}
@@ -188,4 +186,9 @@ WHOOGLE_CONFIG_COUNTRY={{ apps__whoogle_config_country }}
 WHOOGLE_CONFIG_PREFERENCES_ENCRYPTED={{ apps__whoogle_config_preferences_encrypted }}
 WHOOGLE_CONFIG_PREFERENCES_KEY={{ apps__whoogle_config_preferences_key }}
 WHOOGLE_CONFIG_SEARCH_LANGUAGE={{ apps__whoogle_config_search_language }}
+{% endif %}
+
+{% if 'apps' in group_names %}
+## Plex
+PLEX_CLAIM_TOKEN={{ apps__plex_claim_token }}
 {% endif %}
