--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -10,6 +10,10 @@ local-data: "SVLDEV.{{ generic__domain_name }} A 192.168.1.12"
 local-data: "SVLPROD.{{ generic__domain_name }} A 192.168.60.2"
 ## SVLNAS
 local-data: "SVLNAS.{{ generic__domain_name }} A 192.168.1.30"
+## SVLAPPS
+local-data: "SVLAPPS.{{ generic__domain_name }} A 192.168.60.7"
+## SVLMEDIA
+local-data: "SVLMEDIA.{{ generic__domain_name }} A 192.168.60.6"
 ## SVLEXT
 local-data: "SVLEXT.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
@@ -47,44 +51,44 @@ local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
 ### Internal
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "apps-apps.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "apps-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "apps-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "apps-media.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "apps-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "apps-prod.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "bitwarden.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "echo-apps.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "echo-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "metube.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "metube.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless-noauth.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "plex.{{ generic__domain_name }} A 192.168.60.185"
-local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "plex.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.185"
+local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "traefik-prod.{{ generic__domain_name }} A 192.168.60.2"
-local-data: "tubesync.{{ generic__domain_name }} A 192.168.60.213"
+local-data: "tubesync.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "unifi.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-guest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "unifi-noauth.{{ generic__domain_name }} A 192.168.1.11"
