Introduce new infra server

--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -14,6 +14,8 @@ local-data: "SVLNAS.{{ generic__domain_name }} A 192.168.1.30"
 local-data: "SVLAPPS.{{ generic__domain_name }} A 192.168.60.7"
 ## SVLMEDIA
 local-data: "SVLMEDIA.{{ generic__domain_name }} A 192.168.60.6"
+## SVLINFRA
+local-data: "SVLINFRA.{{ generic__domain_name }} A 192.168.1.15"
 ## SVLEXT
 local-data: "SVLEXT.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
@@ -52,10 +54,12 @@ local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 ### Internal
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "apps-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "apps-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "apps-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "apps-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "apps-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "auth-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
@@ -64,10 +68,12 @@ local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "dozzle-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "dozzle-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "dozzle-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "dozzle-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "dozzle-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "echo-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "echo-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "echo-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
@@ -85,6 +91,7 @@ local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "traefik-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "traefik-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "traefik-prod.{{ generic__domain_name }} A 192.168.60.2"
