--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -91,6 +91,7 @@ local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 # local-data: "portainer-prod.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "sabnzbd.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "speedtest.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "status-docker.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "traefik-apps.{{ generic__domain_name }} A 192.168.60.7"
