--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -54,11 +54,7 @@ local-data: "traefik-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 
 ### Internal
 local-data: "adguard-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "apps-apps.{{ generic__domain_name }} A 192.168.60.7"
-local-data: "apps-infra.{{ generic__domain_name }} A 192.168.1.15"
-local-data: "apps-mgmt.{{ generic__domain_name }} A 192.168.1.11"
-local-data: "apps-media.{{ generic__domain_name }} A 192.168.60.6"
-local-data: "apps-prod.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "apps.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "auth-apps.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "auth-infra.{{ generic__domain_name }} A 192.168.1.15"
 local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
@@ -80,6 +76,7 @@ local-data: "echo-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "echo-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "home-assistant.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "homepage-proxy-apps.{{ generic__domain_name }} A 192.168.60.7"
+local-data: "homepage-proxy-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "homepage-proxy-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "linkding.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "metube.{{ generic__domain_name }} A 192.168.60.7"
