--- a/docker/ansible/templates/data/common/homepage/docker.yaml.j2
+++ b/docker/ansible/templates/data/common/homepage/docker.yaml.j2
@@ -18,8 +18,22 @@ docker-apps:
   headers:
     Authorization: Basic {{ generic__docker_traefik_htpasswd_entry_b64 }}
 
+docker-external:
+  host: homepage-proxy-ext.{{ generic__domain_name }}
+  port: 443 # 2375 # Since we run it via proxy, we use port 443
+  protocol: https
+  headers:
+    Authorization: Basic {{ generic__docker_traefik_htpasswd_entry_b64 }}
+
 docker-media:
   host: homepage-proxy-media.{{ generic__domain_name }}
+  port: 443 # 2375 # Since we run it via proxy, we use port 443
+  protocol: https
+  headers:
+    Authorization: Basic {{ generic__docker_traefik_htpasswd_entry_b64 }}
+
+docker-mgmt:
+  host: homepage-proxy-mgmt.{{ generic__domain_name }}
   port: 443 # 2375 # Since we run it via proxy, we use port 443
   protocol: https
   headers:
