--- a/docker/ansible/templates/data/common/homepage/settings.yaml.j2
+++ b/docker/ansible/templates/data/common/homepage/settings.yaml.j2
@@ -4,7 +4,8 @@
 
 # Inspiration: https://technotim.live/posts/homepage-dashboard/
 
-title: "{{ generic__hostname_suffix|upper }} - Home Lab"
+title: "Home Lab"
+#title: "{{ generic__hostname_suffix|upper }} - Home Lab"
 
 theme: dark
 color: slate
