--- a/docker/ansible/templates/data/common/homepage/settings.yaml.j2
+++ b/docker/ansible/templates/data/common/homepage/settings.yaml.j2
@@ -4,7 +4,7 @@
 
 # Inspiration: https://technotim.live/posts/homepage-dashboard/
 
-title: "Home Lab"
+title: "Dashboard"
 #title: "{{ generic__hostname_suffix|upper }} - Home Lab"
 
 theme: dark
@@ -13,6 +13,25 @@ color: slate
 useEqualHeights: true
 hideVersion: true
 showStats: true # Show Docker stats
+headerStyle: clean
+
+layout:
+  # Home:
+  #   icon: mdi-home-analytics
+  Productivity:
+    icon: mdi-briefcase
+  Media:
+    icon: mdi-multimedia
+  Infrastructure:
+    icon: mdi-tools
+  Per Server Consoles:
+    icon: mdi-console
+  # Network:
+  #   icon: mdi-graph
+  # Observability:
+  #   icon: mdi-chart-line
+  # Database:
+  #   icon: mdi-database
 
 background:
   image: https://cdnb.artstation.com/p/assets/images/images/006/897/659/large/mikael-gustafsson-wallpaper-mikael-gustafsson.jpg
