Reintroduce Outline for docs

--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -48,6 +48,7 @@ include:
 {% endif %}
 {% if 'apps' in group_names %}
   - $DOCKERDIR/data/compose/metube.yml
+  - $DOCKERDIR/data/compose/outline.yml
   - $DOCKERDIR/data/compose/plex.yml
   - $DOCKERDIR/data/compose/tubesync.yml
 {% endif %}
