--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -47,6 +47,7 @@ include:
   - $DOCKERDIR/data/compose/sabnzbd.yml
 {% endif %}
 {% if 'apps' in group_names %}
+  - $DOCKERDIR/data/compose/immich.yml
   - $DOCKERDIR/data/compose/metube.yml
   - $DOCKERDIR/data/compose/outline.yml
   - $DOCKERDIR/data/compose/plex.yml
