--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -84,6 +84,7 @@ local-data: "metube.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "paperless.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "paperless-noauth.{{ generic__domain_name }} A 192.168.60.2"
 # local-data: "papermerge.{{ generic__domain_name }} A 192.168.60.2"
+local-data: "photos.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "plex.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "plex-noauth.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "phpmyadmin.{{ generic__domain_name }} A 192.168.1.11"
