--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -181,6 +181,9 @@ WHOOGLE_CONFIG_SEARCH_LANGUAGE={{ apps__whoogle_config_search_language }}
 {% endif %}
 
 {% if 'apps' in group_names %}
+## Immich
+IMMICH_REDIS_PASSWORD={{ apps__immich_redis_password }}
+IMMICH_DB_PASSWORD={{ apps__immich_db_password }}
 ## Outline
 OUTLINE_SECRET_KEY={{ apps__outline_secret_key }}
 OUTLINE_UTILS_SECRET={{ apps__outline_utils_secret }}
