Add open-webui to replace lobechat

--- a/docker/ansible/templates/data/common/unbound/a-records.conf.j2
+++ b/docker/ansible/templates/data/common/unbound/a-records.conf.j2
@@ -37,7 +37,6 @@ local-data: "api-tester-api.{{ generic__domain_name }} A {{ generic__ips_svlext 
 local-data: "apps-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "auth-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 # local-data: "change-detection.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
-local-data: "chat.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "cyberchef.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "dozzle-ext.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
 local-data: "draw.{{ generic__domain_name }} A {{ generic__ips_svlext }}"
@@ -61,6 +60,7 @@ local-data: "auth-mgmt.{{ generic__domain_name }} A 192.168.1.11"
 local-data: "auth-media.{{ generic__domain_name }} A 192.168.60.6"
 local-data: "auth-prod.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "bitwarden.{{ generic__domain_name }} A 192.168.1.11"
+local-data: "chat.{{ generic__domain_name }} A 192.168.60.7"
 local-data: "cloud.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "cloud-noauth.{{ generic__domain_name }} A 192.168.60.2"
 local-data: "code.{{ generic__domain_name }} A 192.168.60.2"
