--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -167,11 +167,6 @@ HOPPSCOTCH_DB_DATA_ENCRYPTION_KEY={{ apps__hoppscotch_db_data_encryption_key }}
 HOPPSCOTCH_GITHUB_CLIENT_ID={{ apps__hoppscotch_github_client_id }}
 HOPPSCOTCH_GITHUB_CLIENT_SECRET={{ apps__hoppscotch_github_client_secret }}
 
-LOBE_CHAT_AZURE_API_KEY={{ apps__lobe_chat_azure_api_key }}
-LOBE_CHAT_AZURE_ENDPOINT={{ apps__lobe_chat_azure_endpoint }}
-LOBE_CHAT_AZURE_API_VERSION={{ apps__lobe_chat_azure_api_version }}
-LOBE_CHAT_AZURE_MODEL_LIST={{ apps__lobe_chat_azure_model_list }}
-
 N8N_DB_PASSWORD={{ apps__n8n_db_password }}
 
 WHOOGLE_CONFIG_COUNTRY={{ apps__whoogle_config_country }}
@@ -184,6 +179,11 @@ WHOOGLE_CONFIG_SEARCH_LANGUAGE={{ apps__whoogle_config_search_language }}
 ## Immich
 IMMICH_REDIS_PASSWORD={{ apps__immich_redis_password }}
 IMMICH_DB_PASSWORD={{ apps__immich_db_password }}
+## Lobe Chat
+LOBE_CHAT_AZURE_API_KEY={{ apps__lobe_chat_azure_api_key }}
+LOBE_CHAT_AZURE_ENDPOINT={{ apps__lobe_chat_azure_endpoint }}
+LOBE_CHAT_AZURE_API_VERSION={{ apps__lobe_chat_azure_api_version }}
+LOBE_CHAT_AZURE_MODEL_LIST={{ apps__lobe_chat_azure_model_list }}
 ## Outline
 OUTLINE_SECRET_KEY={{ apps__outline_secret_key }}
 OUTLINE_UTILS_SECRET={{ apps__outline_utils_secret }}
