--- a/docker/ansible/templates/compose/compose.yml.j2
+++ b/docker/ansible/templates/compose/compose.yml.j2
@@ -49,6 +49,7 @@ include:
 {% if 'apps' in group_names %}
   - $DOCKERDIR/data/compose/immich.yml
   - $DOCKERDIR/data/compose/metube.yml
+  - $DOCKERDIR/data/compose/open-webui.yml
   - $DOCKERDIR/data/compose/outline.yml
   - $DOCKERDIR/data/compose/plex.yml
   - $DOCKERDIR/data/compose/tubesync.yml
