Fix Azure OpenAI endpoint

--- a/docker/ansible/templates/env/env.j2
+++ b/docker/ansible/templates/env/env.j2
@@ -179,11 +179,15 @@ WHOOGLE_CONFIG_SEARCH_LANGUAGE={{ apps__whoogle_config_search_language }}
 ## Immich
 IMMICH_REDIS_PASSWORD={{ apps__immich_redis_password }}
 IMMICH_DB_PASSWORD={{ apps__immich_db_password }}
-## Lobe Chat
-LOBE_CHAT_AZURE_API_KEY={{ apps__lobe_chat_azure_api_key }}
-LOBE_CHAT_AZURE_ENDPOINT={{ apps__lobe_chat_azure_endpoint }}
-LOBE_CHAT_AZURE_API_VERSION={{ apps__lobe_chat_azure_api_version }}
-LOBE_CHAT_AZURE_MODEL_LIST={{ apps__lobe_chat_azure_model_list }}
+## Open WebUI
+OPEN_WEBUI_AZURE_API_URLS={{ apps__open_webui_azure_api_urls }}
+OPEN_WEBUI_AZURE_API_KEYS={{ apps__open_webui_azure_api_keys }}
+OPEN_WEBUI_AZURE_API_PREFIX_IDS={{ apps__open_webui_azure_api_prefix_ids }}
+OPEN_WEBUI_AZURE_API_VERSIONS={{ apps__open_webui_azure_api_versions }}
+OPEN_WEBUI_AZURE_API_TAGS={{ apps__open_webui_azure_api_tags }}
+OPEN_WEBUI_AZURE_API_MODEL_IDS={{ apps__open_webui_azure_api_model_ids }}
+OPEN_WEBUI_OLLAMA_BASE_URL={{ apps__open_webui_ollama_base_url }}
+OPEN_WEBUI_SECRET_KEY={{ apps__open_webui_secret_key }}
 ## Outline
 OUTLINE_SECRET_KEY={{ apps__outline_secret_key }}
 OUTLINE_UTILS_SECRET={{ apps__outline_utils_secret }}
